Fixes #5 - Updated raw url notebooks to work with either env (#9)
* Updated raw url notebooks to work with either env

* Output delete

* Fix cell types in raw solr commands

* Add rebuild code block to the ES raw commands

--- a/notebooks/solr/tmdb/raw-solr-commands.ipynb
+++ b/notebooks/solr/tmdb/raw-solr-commands.ipynb
@@ -6,9 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# If you haven't done LTR\n",
+    "import requests\n",
+    "import json\n",
+    "\n",
     "from ltr.client.solr_client import SolrClient\n",
-    "client = SolrClient()"
+    "\n",
+    "client = SolrClient()\n",
+    "host = client.get_host()"
    ]
   },
   {
@@ -17,18 +21,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Rebuild the index if necessary\n",
     "from ltr.index import rebuild_tmdb\n",
     "rebuild_tmdb(client)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import requests\n",
-    "import json\n"
+    "## Reset LTR stores\n",
+    "\n",
+    "The request below will clear any models under the test store."
    ]
   },
   {
@@ -37,7 +41,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "requests.delete(\"http://localhost:8983/solr/tmdb/schema/model-store/test\")"
+    "url = \"http://{}:8983/solr/tmdb/schema/model-store/test\".format(host)\n",
+    "print(url)\n",
+    "requests.delete(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This request will clear the test feature-store"
    ]
   },
   {
@@ -46,7 +59,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "requests.delete(\"http://localhost:8983/solr/tmdb/schema/feature-store/test\")"
+    "url = \"http://{}:8983/solr/tmdb/schema/feature-store/test\".format(host)\n",
+    "print(url)\n",
+    "requests.delete(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To upload a new feature-store named `test`:"
    ]
   },
   {
@@ -83,8 +105,16 @@
     "   \n",
     "]\n",
     "\n",
-    "requests.put('http://localhost:8983/solr/tmdb/schema/feature-store', \n",
-    "             json=feature_set)"
+    "url = 'http://{}:8983/solr/tmdb/schema/feature-store'.format(host)\n",
+    "print(url)\n",
+    "requests.put(url, json=feature_set)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To verify the new feature-store, issue the following GET request:"
    ]
   },
   {
@@ -93,8 +123,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resp = requests.get('http://localhost:8983/solr/tmdb/schema/feature-store/test')\n",
+    "url = 'http://{}:8983/solr/tmdb/schema/feature-store/test'.format(host)\n",
+    "print(url)\n",
+    "resp = requests.get(url)\n",
     "resp.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Searching and Logging\n",
+    "\n",
+    "The following request will query and log features from the test feature-store."
    ]
   },
   {
@@ -116,7 +157,9 @@
     "    'wt': 'json'  \n",
     "}\n",
     "\n",
-    "resp = requests.post('http://localhost:8983/solr/tmdb/select', data=params).json()\n",
+    "url = 'http://{}:8983/solr/tmdb/select'.format(host)\n",
+    "print(url)\n",
+    "resp = requests.post(url, data=params).json()\n",
     "resp"
    ]
   },
@@ -137,6 +180,15 @@
     "\n",
     "\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Uploading a Model\n",
+    "\n",
+    "Once features have been logged and training data has been generated, a model can be pushed into Solr. The following code shows how to upload a pre-trained model."
    ]
   },
   {
@@ -238,8 +290,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "requests.put('http://localhost:8983/solr/tmdb/schema/model-store',\n",
-    "              json=solr_model)"
+    "url = 'http://{}:8983/solr/tmdb/schema/model-store'.format(host)\n",
+    "print(url)\n",
+    "requests.put(url, json=solr_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Searching with a Model\n",
+    "Now that a model is uploaded, we can use it to re-rank the results in Solr."
    ]
   },
   {
@@ -255,8 +316,18 @@
     "    'fl': 'title'\n",
     "}\n",
     "\n",
-    "resp = requests.post('http://localhost:8983/solr/tmdb/select', data=params).json()\n",
+    "url = 'http://{}:8983/solr/tmdb/select'.format(host)\n",
+    "print(url)\n",
+    "resp = requests.post(url, data=params).json()\n",
     "resp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rerank Query\n",
+    "The follwing example shows how to use a rerank query "
    ]
   },
   {
@@ -273,7 +344,9 @@
     "    'rq': '{!ltr reRankDocs=50 model=test efi.keywords=\\\"rambo\\\"}'\n",
     "}\n",
     "\n",
-    "resp = requests.post('http://localhost:8983/solr/tmdb/select', data=params).json()\n",
+    "url = 'http://{}:8983/solr/tmdb/select'.format(host)\n",
+    "print(url)\n",
+    "resp = requests.post(url, data=params).json()\n",
     "resp"
    ]
   },
@@ -301,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
