Flesh out raw notebook more

--- a/notebooks/elasticsearch/tmdb/raw-es-commands.ipynb
+++ b/notebooks/elasticsearch/tmdb/raw-es-commands.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LTR Plugin Initialization\n",
+    "## Init Default Feature Store\n",
     "The feature store can be removed by sending a DELETE request to `_ltr` endpoint."
    ]
   },
@@ -67,6 +67,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Create Feature Set\n",
+    "\n",
     "A feature set can be created by issuing a PUT to `_ltr/featureset/[feature_name]`"
    ]
   },
@@ -120,35 +122,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Searching and Logging\n",
-    "\n",
-    "The following request demonstrates issuing a basic search and viewing the title."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "search = {\n",
-    "    \"query\": { \n",
-    "    \"match\": {\n",
-    "        \"title\": \"First Blood\"\n",
-    "    }}\n",
-    "}\n",
-    "\n",
-    "url = 'http://{}:9200/tmdb/_search'.format(host)\n",
-    "print(url)\n",
-    "resp = requests.get(url, json=search).json()\n",
-    "print(resp['hits']['hits'][0]['_source']['title'])"
+    "## Log Some Judged Queries To Build Training Set"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next request demonstrates how to utilize the logging extension with a sltr query.  The sltr query specifies which feature set to utilize and specifies any parameters that the feature set may need."
+    "If we have 4 judged documents: 7555,1370, 1369, and 1368 for keywords rambo:\n",
+    "\n",
+    "```\n",
+    "doc_id, relevant?, keywords\n",
+    "1368, 1, rambo\n",
+    "1369, 1, rambo\n",
+    "1370, 1, rambo\n",
+    "7555, 0, rambo\n",
+    "```\n",
+    "\n",
+    "\n",
+    "We need to get feature value for each row.\n",
+    "\n",
+    "To do this, we utilize the logging extension to populate the judgment list with features for training."
    ]
   },
   {
@@ -194,6 +188,43 @@
     "print(url)\n",
     "resp = requests.get(url, json=search_with_log).json()\n",
     "print(json.dumps(resp['hits']['hits'][0], indent=2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training Set Now...\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "doc_id, relevant?, keywords, ftr1, ftr2\n",
+    "1368, 1, rambo, 0, 11.113943\n",
+    "1369, 1, rambo, 11.657, 10.08\n",
+    "1370, 1, rambo, 9.456, 13.265\n",
+    "7555, 0, rambo, 6.037, 11.114\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train a model\n",
+    "\n",
+    "We won't do this here, but if you like you can try out training a model using Ranklib \n",
+    "\n",
+    "```\n",
+    "cd notebooks/elasticsearch/tmdb\n",
+    "java -jar data/RankyMcRankFace.jar -train data/title_judgments.txt -save data/model.txt\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -369,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
