--- a/notebooks/elasticsearch/tmdb/raw-es-commands.ipynb
+++ b/notebooks/elasticsearch/tmdb/raw-es-commands.ipynb
@@ -203,7 +203,7 @@
    "metadata": {},
    "source": [
     "```\n",
-    "doc_id, relevant?, keywords, ftr1, ftr2\n",
+    "doc_id, relevant?, keywords, title_bm25, overview_bm25\n",
     "1368, 1, rambo, 0, 11.113943\n",
     "1369, 1, rambo, 11.657, 10.08\n",
     "1370, 1, rambo, 9.456, 13.265\n",
