Add downloads to raw notebook

--- a/notebooks/elasticsearch/tmdb/raw-es-commands.ipynb
+++ b/notebooks/elasticsearch/tmdb/raw-es-commands.ipynb
@@ -22,6 +22,9 @@
    "outputs": [],
    "source": [
     "# Rebuild the index if necessary\n",
+    "from ltr import download\n",
+    "download()\n",
+    "\n",
     "from ltr.index import rebuild_tmdb\n",
     "rebuild_tmdb(client)"
    ]
