--- a/notebooks/solr/tmdb/raw-solr-commands.ipynb
+++ b/notebooks/solr/tmdb/raw-solr-commands.ipynb
@@ -22,6 +22,9 @@
    "outputs": [],
    "source": [
     "# Rebuild the index if necessary\n",
+    "from ltr import download\n",
+    "download()\n",
+    "\n",
     "from ltr.index import rebuild_tmdb\n",
     "rebuild_tmdb(client)"
    ]
@@ -374,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
