NB Output Cleanup

--- a/notebooks/solr/tmdb/svmrank.ipynb
+++ b/notebooks/solr/tmdb/svmrank.ipynb
@@ -30,9 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/tmdb.json already exists\n",
+      "data/blog.jsonl already exists\n",
+      "data/osc_judgments.txt already exists\n",
+      "data/RankyMcRankFace.jar already exists\n",
+      "data/title_judgments.txt already exists\n",
+      "data/genome_judgments.txt already exists\n",
+      "data/sample_judgments_train.txt already exists\n",
+      "Done.\n"
+     ]
+    }
+   ],
    "source": [
     "from ltr import download\n",
     "download();"
@@ -665,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +696,7 @@
        "LinearSVC(verbose=1)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,16 +709,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.41365998, 0.06618857, 0.07113058]])"
+       "array([[0.41365997, 0.06618855, 0.07113071]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -732,12 +747,12 @@
        "  {'name': 'release_year',\n",
        "   'norm': {'class': 'org.apache.solr.ltr.norm.StandardNormalizer',\n",
        "    'params': {'avg': '1993.2558139534883', 'std': '21.281902017834096'}}}],\n",
-       " 'params': {'weights': {'title_bm25': 0.41365997914541397,\n",
-       "   'overview_bm25': 0.0661885720704339,\n",
-       "   'release_year': 0.07113057502632157}}}"
+       " 'params': {'weights': {'title_bm25': 0.41365997393478904,\n",
+       "   'overview_bm25': 0.06618854827973347,\n",
+       "   'release_year': 0.07113070638739571}}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,32 +792,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'SolrClient' object has no attribute 'submit_model_raw'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-2b97920769e4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m client.submit_model_raw(featureset='title', \n\u001b[0m\u001b[1;32m      3\u001b[0m                         \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'tmdb'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                         \u001b[0mmodel_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'movie_titles'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                         solr_model=linear_model)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'SolrClient' object has no attribute 'submit_model_raw'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted Model movie_titles [Status: 200]\n",
+      "Created Model movie_titles [Status: 200]\n"
      ]
     }
    ],
    "source": [
     "import json\n",
-    "client.submit_model_raw(featureset='title', \n",
-    "                        index='tmdb', \n",
-    "                        model_name='movie_titles', \n",
-    "                        solr_model=linear_model)"
+    "client.submit_model(featureset='title', \n",
+    "                    index='tmdb', \n",
+    "                    model_name='movie_titles', \n",
+    "                    solr_model=linear_model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -810,31 +822,31 @@
      "output_type": "stream",
      "text": [
       "['Rambo'] \n",
-      "1.101082 \n",
+      "1.1010934 \n",
       "2008 \n",
       "['Action', 'Thriller'] \n",
       "[\"When governments fail to act on behalf of captive missionaries, ex-Green Beret John James Rambo sets aside his peaceful existence along the Salween River in a war-torn region of Thailand to take action.  Although he's still haunted by violent memories of his time as a U.S. soldier during the Vietnam War, Rambo can hardly turn his back on the aid workers who so desperately need his help.\"] \n",
       "---------------------------------------\n",
       "['Rambo III'] \n",
-      "0.8701041 \n",
+      "0.87011147 \n",
       "1988 \n",
       "['Action', 'Adventure', 'Thriller', 'War'] \n",
       "[\"Combat has taken its toll on Rambo, but he's finally begun to find inner peace in a monastery. When Rambo's friend and mentor Col. Trautman asks for his help on a top secret mission to Afghanistan, Rambo declines but must reconsider when Trautman is captured.\"] \n",
       "---------------------------------------\n",
       "['Rambo: First Blood Part II'] \n",
-      "0.529625 \n",
+      "0.5296307 \n",
       "1985 \n",
       "['Action', 'Adventure', 'Drama', 'Thriller', 'War'] \n",
       "[\"Col. Troutman recruits ex-Green Beret John Rambo for a highly secret and dangerous mission. Teamed with freedom fighter Co Bao, Rambo goes deep into Vietnam to rescue POWs. Deserted by his own team, he's left in a hostile jungle to fight for his life, avenge the death of a woman and bring corrupt officials to justice.\"] \n",
       "---------------------------------------\n",
       "['Son of Rambow'] \n",
-      "-0.13420069 \n",
+      "-0.13419434 \n",
       "2007 \n",
       "['Comedy'] \n",
       "['Will Proudfoot (Bill Milner) is looking for an escape from his family\\'s stifling home life when he encounters Lee Carter (Will Poulter), the school bully. Armed with a video camera and a copy of \"Rambo: First Blood\", Lee plans to make cinematic history by filming his own action-packed video epic. Together, these two newfound friends-turned-budding-filmmakers quickly discover that their imaginative ― and sometimes mishap-filled ― cinematic adventure has begun to take on a life of its own!'] \n",
       "---------------------------------------\n",
       "['First Blood'] \n",
-      "-0.14754587 \n",
+      "-0.14754218 \n",
       "1982 \n",
       "['Action', 'Adventure', 'Thriller', 'War'] \n",
       "['When former Green Beret John Rambo is harassed by local law enforcement and arrested for vagrancy, the Vietnam vet snaps, runs for the hills and rat-a-tat-tats his way into the action-movie hall of fame. Hounded by a relentless sheriff, Rambo employs heavy-handed guerilla tactics to shake the cops off his tail.'] \n",
