Remove TMDB from top level rebuild

--- a/notebooks/elasticsearch/tmdb/es-ltr-basics-project.ipynb
+++ b/notebooks/elasticsearch/tmdb/es-ltr-basics-project.ipynb
@@ -26,8 +26,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.index import rebuild_tmdb\n",
-    "rebuild_tmdb(client)"
+    "from ltr.index import rebuild\n",
+    "from ltr.helpers.movies import indexable_movies\n",
+    "\n",
+    "movies=indexable_movies(movies='data/tmdb.json')\n",
+    "rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
   {
