--- a/notebooks/elasticsearch/tmdb/netfix movies-random-forests.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies-random-forests.ipynb
@@ -38,8 +38,11 @@
     "            base_doc['collection_name'] = src_movie['belongs_to_collection']['name']\n",
     "    return base_doc\n",
     "\n",
-    "from ltr.index import rebuild_tmdb\n",
-    "rebuild_tmdb(client, enrich=add_collection_name)"
+    "from ltr.index import rebuild\n",
+    "from ltr.helpers.movies import indexable_movies\n",
+    "\n",
+    "movies=indexable_movies(movies='data/tmdb.json', enrich=add_collection_name)\n",
+    "rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
   {
