--- a/notebooks/elasticsearch/tmdb/netfix movies.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies.ipynb
@@ -33,10 +33,12 @@
    "outputs": [],
    "source": [
     "from ltr import download\n",
-    "download();\n",
+    "from ltr.index import rebuild\n",
+    "from ltr.helpers.movies import indexable_movies\n",
     "\n",
-    "from ltr.index import rebuild_tmdb\n",
-    "rebuild_tmdb(client)"
+    "download();\n",
+    "movies=indexable_movies(movies='data/tmdb.json')\n",
+    "rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
   {
@@ -493,8 +495,8 @@
     "            base_doc['collection_name'] = src_movie['belongs_to_collection']['name']\n",
     "    return base_doc\n",
     "\n",
-    "from ltr.index import rebuild_tmdb\n",
-    "rebuild_tmdb(client, enrich=add_collection_name)"
+    "movies=indexable_movies(movies='data/tmdb.json', enrich=add_collection_name)\n",
+    "rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
   {
