--- a/notebooks/elasticsearch/tmdb/raw-es-commands.ipynb
+++ b/notebooks/elasticsearch/tmdb/raw-es-commands.ipynb
@@ -23,10 +23,12 @@
    "source": [
     "# Rebuild the index if necessary\n",
     "from ltr import download\n",
-    "download()\n",
+    "from ltr.index import rebuild\n",
+    "from ltr.helpers.movies import indexable_movies\n",
     "\n",
-    "from ltr.index import rebuild_tmdb\n",
-    "rebuild_tmdb(client)"
+    "download()\n",
+    "movies=indexable_movies(movies='data/tmdb.json')\n",
+    "rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
   {
