--- a/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
+++ b/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To get to know Solr "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Solr Client"
    ]
   },
@@ -44,11 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.index import rebuild\n",
-    "from ltr.helpers.movies import indexable_movies\n",
-    "\n",
-    "movies=indexable_movies(movies='data/tmdb.json')\n",
-    "rebuild(client, index='tmdb', doc_src=movies)"
+    "from ltr.index import rebuild_tmdb\n",
+    "rebuild_tmdb(client)"
    ]
   },
   {
