--- a/notebooks/solr/tmdb/netfix movies(Solr).ipynb
+++ b/notebooks/solr/tmdb/netfix movies(Solr).ipynb
@@ -42,8 +42,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.index import rebuild_tmdb\n",
-    "rebuild_tmdb(client)"
+    "from ltr.index import rebuild\n",
+    "from ltr.helpers.movies import indexable_movies\n",
+    "\n",
+    "movies=indexable_movies(movies='data/tmdb.json')\n",
+    "rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
   {
@@ -490,6 +493,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ltr.index import rebuild\n",
+    "from ltr.helpers.movies import indexable_movies\n",
+    "\n",
     "def add_collection_and_char_name(src_movie, base_doc):\n",
     "    if 'belongs_to_collection' in src_movie and src_movie['belongs_to_collection'] is not None:\n",
     "        if 'name' in src_movie['belongs_to_collection']:\n",
@@ -500,8 +506,8 @@
     "        base_doc['top_cast_en'] = characters\n",
     "    return base_doc\n",
     "\n",
-    "from ltr.index import rebuild_tmdb\n",
-    "rebuild_tmdb(client, enrich=add_collection_and_char_name)"
+    "movies=indexable_movies(movies='data/tmdb.json', enrich=add_collection_and_char_name)\n",
+    "rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
   {
@@ -809,6 +815,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ltr.index import rebuild\n",
+    "from ltr.helpers.movies import indexable_movies\n",
+    "\n",
     "def add_collection_and_char_name(src_movie, base_doc):\n",
     "    if 'belongs_to_collection' in src_movie and src_movie['belongs_to_collection'] is not None:\n",
     "        if 'name' in src_movie['belongs_to_collection']:\n",
@@ -819,8 +828,8 @@
     "        base_doc['top_chars_en'] = characters\n",
     "    return base_doc\n",
     "\n",
-    "from ltr.index import rebuild_tmdb\n",
-    "rebuild_tmdb(client, enrich=add_collection_and_char_name)"
+    "movies=indexable_movies(movies='data/tmdb.json', enrich=add_collection_and_char_name)\n",
+    "rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
   {
