make downloads explicit per directory

--- a/notebooks/elasticsearch/osc-blog/osc-blog.ipynb
+++ b/notebooks/elasticsearch/osc-blog/osc-blog.ipynb
@@ -14,7 +14,10 @@
    "outputs": [],
    "source": [
     "from ltr import download\n",
-    "download();"
+    "corpus='http://es-learn-to-rank.labs.o19s.com/blog.jsonl'\n",
+    "judgments='http://es-learn-to-rank.labs.o19s.com/osc_judgments.txt'\n",
+    "\n",
+    "download([corpus, judgments], dest='data/');"
    ]
   },
   {
