--- a/notebooks/elasticsearch/tmdb/netfix movies-random-forests.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies-random-forests.ipynb
@@ -40,6 +40,11 @@
     "\n",
     "from ltr.index import rebuild\n",
     "from ltr.helpers.movies import indexable_movies\n",
+    "from ltr import download\n",
+    "\n",
+    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "judgments='http://es-learn-to-rank.labs.o19s.com/title_judgments.txt'\n",
+    "download([corpus, judgments], dest='data/');\n",
     "\n",
     "movies=indexable_movies(movies='data/tmdb.json', enrich=add_collection_name)\n",
     "rebuild(client, index='tmdb', doc_src=movies)"
