--- a/notebooks/elasticsearch/tmdb/tale-of-two-queries (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/tale-of-two-queries (ES).ipynb
@@ -21,8 +21,11 @@
     "from ltr import download, index\n",
     "from ltr.index import rebuild\n",
     "from ltr.helpers.movies import indexable_movies\n",
+    "from ltr import download\n",
     "\n",
-    "download();\n",
+    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "download([corpus], dest='data/');\n",
+    "\n",
     "movies=indexable_movies(movies='data/tmdb.json')\n",
     "rebuild(client, index='tmdb', doc_src=movies)"
    ]
