--- a/notebooks/solr/msmarco/msmarco.ipynb
+++ b/notebooks/solr/msmarco/msmarco.ipynb
@@ -31,8 +31,12 @@
    "outputs": [],
    "source": [
     "# Download MSMarco Corpus and Queries -> data directory\n",
-    "from ltr.download import download_msmarco\n",
-    "download_msmarco()"
+    "from ltr import download\n",
+    "msmarco_resources = ['https://msmarco.blob.core.windows.net/msmarcoranking/msmarco-docs.tsv.gz',\n",
+    "                     'https://msmarco.blob.core.windows.net/msmarcoranking/msmarco-docs-lookup.tsv.gz',\n",
+    "                     'https://msmarco.blob.core.windows.net/msmarcoranking/msmarco-doctrain-qrels.tsv.gz',\n",
+    "                     'https://msmarco.blob.core.windows.net/msmarcoranking/msmarco-doctrain-queries.tsv.gz']\n",
+    "download(msmarco_resources, dest='data/')"
    ]
   },
   {
