--- a/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
+++ b/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
@@ -42,7 +42,10 @@
    "outputs": [],
    "source": [
     "from ltr import download\n",
-    "download();"
+    "\n",
+    "tmdb_corpus='http://es-learn-to-rank.labs.o19s.com/tmdb_ai_pow_search.json'\n",
+    "judgments='http://es-learn-to-rank.labs.o19s.com/title_judgments_binary.txt'\n",
+    "download([tmdb_corpus, judgments]);"
    ]
   },
   {
@@ -51,8 +54,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.index import rebuild_tmdb\n",
-    "rebuild_tmdb(client)"
+    "from ltr.index import rebuild\n",
+    "from ltr.helpers.movies import indexable_movies\n",
+    "movies=indexable_movies(movies='data/tmdb_ai_pow_search.json')\n",
+    "rebuild(client, index='tmdb', doc_src=movies)"
    ]
   },
   {
