--- a/notebooks/elasticsearch/tmdb/es-ltr-basics-project.ipynb
+++ b/notebooks/elasticsearch/tmdb/es-ltr-basics-project.ipynb
@@ -17,7 +17,10 @@
    "outputs": [],
    "source": [
     "from ltr import download\n",
-    "download();"
+    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "judgments='http://es-learn-to-rank.labs.o19s.com/title_judgments.txt'\n",
+    "\n",
+    "download([corpus, judgments], dest='data/');"
    ]
   },
   {
