--- a/notebooks/elasticsearch/tmdb/hello-ltr (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/hello-ltr (ES).ipynb
@@ -32,7 +32,9 @@
    "outputs": [],
    "source": [
     "from ltr import download\n",
-    "download()"
+    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "\n",
+    "download([corpus], dest='data/');"
    ]
   },
   {
