--- a/notebooks/solr/tmdb/hello-ltr (Solr).ipynb
+++ b/notebooks/solr/tmdb/hello-ltr (Solr).ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download some requirements"
+    "### Download needed dataset"
    ]
   },
   {
@@ -25,7 +25,9 @@
    "outputs": [],
    "source": [
     "from ltr import download\n",
-    "download()"
+    "\n",
+    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "download([corpus], dest='data/');"
    ]
   },
   {
