--- a/notebooks/solr/tmdb/netfix movies(Solr).ipynb
+++ b/notebooks/solr/tmdb/netfix movies(Solr).ipynb
@@ -33,7 +33,10 @@
    "outputs": [],
    "source": [
     "from ltr import download\n",
-    "download();"
+    "\n",
+    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "judgments='http://es-learn-to-rank.labs.o19s.com/title_judgments.txt'\n",
+    "download([corpus, judgments], dest='data/');"
    ]
   },
   {
