--- a/notebooks/solr/tmdb/svmrank.ipynb
+++ b/notebooks/solr/tmdb/svmrank.ipynb
@@ -35,7 +35,11 @@
    "outputs": [],
    "source": [
     "from ltr import download\n",
-    "download();"
+    "\n",
+    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "judgments='http://es-learn-to-rank.labs.o19s.com/title_judgments_binary.txt'\n",
+    "\n",
+    "download([corpus, judgments], dest='data/');"
    ]
   },
   {
