Forgot download fixes

--- a/notebooks/elasticsearch/tmdb/raw-es-commands.ipynb
+++ b/notebooks/elasticsearch/tmdb/raw-es-commands.ipynb
@@ -27,7 +27,7 @@
     "from ltr.helpers.movies import indexable_movies\n",
     "\n",
     "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
-    "download([corpus], dest='data/');'\n",
+    "download([corpus], dest='data/');\n",
     "\n",
     "movies=indexable_movies(movies='data/tmdb.json')\n",
     "rebuild(client, index='tmdb', doc_src=movies)"
