--- a/notebooks/solr/tmdb/raw-solr-commands.ipynb
+++ b/notebooks/solr/tmdb/raw-solr-commands.ipynb
@@ -26,7 +26,8 @@
     "from ltr.index import rebuild\n",
     "from ltr.helpers.movies import indexable_movies\n",
     "\n",
-    "download()\n",
+    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "download([corpus], dest='data/')\n",
     "movies=indexable_movies(movies='data/tmdb.json')\n",
     "rebuild(client, index='tmdb', doc_src=movies)"
    ]
