Take file obj, not filename

--- a/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
+++ b/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
@@ -173,8 +173,9 @@
     "    return np.array(transformed_features), np.array(transformed_predictors)\n",
     "\n",
     "def samples_from_training_data(fname):\n",
-    "    judgs = judgments_from_file(fname)\n",
-    "    features, predictors = judgments_to_nparray(judgs)\n",
+    "    with open(fname) as f:\n",
+    "        judgs = judgments_from_file(fname)\n",
+    "        features, predictors = judgments_to_nparray(judgs)\n",
     "    \n",
     "    # Scale data\n",
     "    print(\"Scaling\")\n",
