--- a/notebooks/elasticsearch/tmdb/netfix movies.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies.ipynb
@@ -36,7 +36,10 @@
     "from ltr.index import rebuild\n",
     "from ltr.helpers.movies import indexable_movies\n",
     "\n",
-    "download();\n",
+    "corpus='http://es-learn-to-rank.labs.o19s.com/tmdb.json'\n",
+    "judgments='http://es-learn-to-rank.labs.o19s.com/title_judgments.txt'\n",
+    "download([corpus, judgments], dest='data/');\n",
+    "\n",
     "movies=indexable_movies(movies='data/tmdb.json')\n",
     "rebuild(client, index='tmdb', doc_src=movies)"
    ]
@@ -50,6 +53,16 @@
     "We'll be searching movie titles (think searching for a specific movie on Netflix). And we have a set of judgments around the appropriatte movie to return. IE search for \"Star Wars\" return good star wars matches, in quality order...\n",
     "\n",
     "These cover various aspects of the problem (searching title by phrase, title bm25 score, release date, etc). We'll use this to explore and analyze a simple model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clear TMDB's LTR\n",
+    "client.reset_ltr(index='tmdb')"
    ]
   },
   {
@@ -142,7 +155,6 @@
     "\n",
     "\n",
     "\n",
-    "from ltr import setup\n",
     "setup(client, config=config, index='tmdb', featureset='title')"
    ]
   },
