--- a/notebooks/elasticsearch/tmdb/netfix movies-random-forests.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies-random-forests.ipynb
@@ -67,6 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "config = {\"validation\": {\n",
     "              \"index\": \"tmdb\",\n",
     "              \"params\": {\n",
@@ -165,10 +167,7 @@
     "    }}\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "from ltr import setup\n",
-    "setup(client, config=config, index='tmdb', featureset='title_rf')"
+    "client.create_featureset(index='tmdb', name='title_rf', ftr_config=config)"
    ]
   },
   {
