--- a/notebooks/elasticsearch/tmdb/netfix movies.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies.ipynb
@@ -71,6 +71,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "config = {\"validation\": {\n",
     "              \"index\": \"tmdb\",\n",
     "              \"params\": {\n",
@@ -153,9 +155,7 @@
     "    }}\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "setup(client, config=config, index='tmdb', featureset='title')"
+    "client.create_featureset(index='tmdb', name='title', ftr_config=config)"
    ]
   },
   {
@@ -637,11 +637,7 @@
     "            ]\n",
     "    }}\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "from ltr import setup\n",
-    "setup(client, config=config, index='tmdb', featureset='title2')\n",
+    "client.create_featureset(index='tmdb', name='title2', ftr_config=config)\n",
     "\n",
     "from ltr.log import judgments_to_training_set\n",
     "trainingSet = judgments_to_training_set(client, \n",
