--- a/notebooks/elasticsearch/tmdb/tale-of-two-queries (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/tale-of-two-queries (ES).ipynb
@@ -102,6 +102,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "config = {\n",
     "    \"featureset\": {\n",
     "            \"features\": [\n",
@@ -162,8 +164,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "from ltr.setup import setup\n",
-    "setup(client, index='tmdb', config=config, featureset='genre')"
+    "client.create_featureset(index='tmdb', name='genre', ftr_config=config)"
    ]
   },
   {
