--- a/notebooks/solr/tmdb/hello-ltr (Solr).ipynb
+++ b/notebooks/solr/tmdb/hello-ltr (Solr).ipynb
@@ -85,6 +85,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "config = [\n",
     "  {\n",
     "    \"store\": \"release\", # Note: This overrides the _DEFAULT_ feature store location\n",
@@ -97,8 +99,7 @@
     "]\n",
     "\n",
     "\n",
-    "from ltr import setup\n",
-    "setup(client, config=config, index='tmdb', featureset='release')"
+    "client.create_featureset(index='tmdb', name='release', ftr_config=config)"
    ]
   },
   {
