--- a/notebooks/solr/tmdb/svmrank.ipynb
+++ b/notebooks/solr/tmdb/svmrank.ipynb
@@ -72,6 +72,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "ftr_config = [\n",
     "    #1\n",
     "    {\n",
@@ -102,10 +104,7 @@
     "\n",
     "]\n",
     "\n",
-    "\n",
-    "\n",
-    "from ltr import setup\n",
-    "setup(client, config=ftr_config, index='tmdb', featureset='title')"
+    "client.create_featureset(index='tmdb', name='title', ftr_config=ftr_config)"
    ]
   },
   {
