--- a/notebooks/elasticsearch/tmdb/gonna need a bigger bot (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/gonna need a bigger bot (ES).ipynb
@@ -100,6 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "config = {\n",
     "    \"featureset\": {\n",
     "        \"features\": [\n",
@@ -135,9 +137,7 @@
     "           }\n",
     "}\n",
     "\n",
-    "\n",
-    "from ltr import setup\n",
-    "setup(client, config=config, index='tmdb', featureset='genome')"
+    "client.create_featureset(index='tmdb', name='genome', ftr_config=config)"
    ]
   },
   {
