--- a/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
+++ b/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
@@ -77,6 +77,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "ftr_config = [\n",
     "    #1\n",
     "    {\n",
@@ -109,8 +111,7 @@
     "\n",
     "\n",
     "\n",
-    "from ltr import setup\n",
-    "setup(client, config=ftr_config, index='tmdb', featureset='title')"
+    "client.create_featureset(index='tmdb', name='title', ftr_config=ftr_config)"
    ]
   },
   {
