--- a/notebooks/solr/tmdb/gonna need a bigger bot (Solr).ipynb
+++ b/notebooks/solr/tmdb/gonna need a bigger bot (Solr).ipynb
@@ -100,6 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "config = [\n",
     "    {\n",
     "        \"store\": \"genome\",\n",
@@ -119,9 +121,7 @@
     "    }\n",
     "]\n",
     "\n",
-    "\n",
-    "from ltr import setup\n",
-    "setup(client, config=config, index='tmdb', featureset='genome')"
+    "client.create_featureset(index='tmdb', name='title', ftr_config=config)"
    ]
   },
   {
