--- a/notebooks/solr/tmdb/netfix movies(Solr).ipynb
+++ b/notebooks/solr/tmdb/netfix movies(Solr).ipynb
@@ -69,6 +69,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "config = [\n",
     "    #1\n",
     "    {\n",
@@ -136,10 +138,7 @@
     "\n",
     "]\n",
     "\n",
-    "\n",
-    "\n",
-    "from ltr import setup\n",
-    "setup(client, config=config, index='tmdb', featureset='title')"
+    "client.create_featureset(index='tmdb', name='title', ftr_config=config)"
    ]
   },
   {
@@ -628,10 +627,7 @@
     "]\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "from ltr import setup\n",
-    "setup(client, config=config, index='tmdb', featureset='title2')\n",
+    "client.create_featureset(index='tmdb', name='title2', ftr_config=config)\n",
     "\n",
     "from ltr.log import judgments_to_training_set\n",
     "trainingSet = judgments_to_training_set(client, \n",
@@ -842,140 +838,6 @@
    "outputs": [],
    "source": [
     "client.get_doc(index='tmdb', doc_id=1892)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#4 - 18032.527656827504\n",
-    "#3 - 9801.409052757816\n",
-    "#5 - 8051.741259194476\n",
-    "#7 - 5711.964176322393\n",
-    "#8 - 3798.6132329430748\n",
-    "#1 - 1439.2180228991883\n",
-    "\n",
-    "config = [\n",
-    "    #1\n",
-    "    {\n",
-    "      \"name\" : \"title_has_phrase\",\n",
-    "      \"store\": \"title_doug\",\n",
-    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
-    "        \"q\" : \"title:\\\"${keywords})\\\"^=1\"\n",
-    "      }\n",
-    "    },\n",
-    "    #2 (old 3)\n",
-    "    {\n",
-    "      \"name\" : \"title_bm25\",\n",
-    "      \"store\": \"title_doug\",\n",
-    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
-    "        \"q\" : \"title:(${keywords})\"\n",
-    "      }\n",
-    "    },\n",
-    "    #3 (old 4)\n",
-    "    {\n",
-    "      \"name\" : \"overview_bm25\",\n",
-    "      \"store\": \"title_doug\",\n",
-    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
-    "        \"q\" : \"overview:(${keywords})\"\n",
-    "      }\n",
-    "    },\n",
-    "    #4 (old 5)\n",
-    "    {\n",
-    "      \"name\" : \"overview_phrase_bm25\",\n",
-    "      \"store\": \"title_doug\",\n",
-    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
-    "        \"q\" : \"overview:\\\"${keywords}\\\"\"\n",
-    "      }\n",
-    "    },\n",
-    "    #5 (old 7)\n",
-    "    {\n",
-    "      \"name\" : \"release_year\",\n",
-    "      \"store\": \"title_doug\",\n",
-    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
-    "        \"q\" : \"{!func}def(release_year,2000)\"\n",
-    "      }\n",
-    "    },\n",
-    "    #6 (old 8) Collection Name BM25 Score\n",
-    "    {\n",
-    "      \"name\" : \"coll_name_bm25\",\n",
-    "      \"store\": \"title_doug\",\n",
-    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
-    "        \"q\" : \"collection_name_en:(${keywords})\"\n",
-    "      }\n",
-    "    },\n",
-    "    #7 pf2\n",
-    "    {\n",
-    "      \"name\" : \"top_chars_phrase_bm25\",\n",
-    "      \"store\": \"title_doug\",\n",
-    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
-    "        \"q\" : \"top_chars_en:\\\"${keywords}\\\"\"\n",
-    "      }\n",
-    "    },\n",
-    "    #8 pf2\n",
-    "    {\n",
-    "      \"name\" : \"top_chars_bm25\",\n",
-    "      \"store\": \"title_doug\",\n",
-    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
-    "        \"q\" : \"top_chars_en:(${keywords})\"\n",
-    "      }\n",
-    "    }\n",
-    "\n",
-    "]\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "from ltr import setup\n",
-    "setup(client, config=config, index='tmdb', featureset='title_doug')\n",
-    "\n",
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client, \n",
-    "                                        judgmentInFile='data/title_judgments.txt', \n",
-    "                                        trainingOutFile='data/title_doug_judgments_train.txt', \n",
-    "                                        featureSet='title_doug')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ltr.train import feature_search\n",
-    "rankLibResult, ndcgPerFeature = feature_search(client,\n",
-    "                                               trainingInFile='data/title_doug_judgments_train.txt',\n",
-    "                                               metric2t='NDCG@10',\n",
-    "                                               leafs=20,\n",
-    "                                               trees=20,\n",
-    "                                               kcv=5,\n",
-    "                                               features=[1,2,3,4,5,6,7,8],\n",
-    "                                               featureSet='title_doug')\n",
-    "\n",
-    "print()\n",
-    "print(\"Impact of each feature on the model\")\n",
-    "trainLogs = rankLibResult.trainingLogs\n",
-    "for ftrId, impact in trainLogs[-1].impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
-    "    \n",
-    "for roundDcg in trainLogs[-1].rounds:\n",
-    "    print(roundDcg)\n",
-    "    \n",
-    "print(\"Avg NDCG@10 when feature included:\")\n",
-    "for ftrId, ndcg in ndcgPerFeature.items():\n",
-    "    print(\"%s => %s\" % (ftrId, ndcg))\n",
-    "    \n",
-    "print(\"Avg K-Fold NDCG@10 %s\" % rankLibResult.kcvTestAvg)"
    ]
   },
   {
