Fix notebook judgment opening

--- a/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
+++ b/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
@@ -175,7 +175,7 @@
     "\n",
     "def samples_from_training_data(fname):\n",
     "    with open(fname) as f:\n",
-    "        judgs = judgments_from_file(fname)\n",
+    "        judgs = judgments_from_file(f)\n",
     "        features, predictors = judgments_to_nparray(judgs)\n",
     "    \n",
     "    # Scale data\n",
