Missed a setup -> explicit call

--- a/notebooks/solr/tmdb/tale-of-two-queries (Solr).ipynb
+++ b/notebooks/solr/tmdb/tale-of-two-queries (Solr).ipynb
@@ -101,6 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "config = [\n",
     "            {\n",
     "                \"store\": \"genre\", # Note: This overrides the _DEFAULT_ feature store location\n",
@@ -136,9 +138,7 @@
     "            }\n",
     "]\n",
     "\n",
-    "\n",
-    "from ltr.setup import setup\n",
-    "setup(client, config=config, index='tmdb', featureset='genre')"
+    "client.create_featureset(index='tmdb', name='genre', ftr_config=config)\n"
    ]
   },
   {
