Fix netfix notebooks judg. access

--- a/notebooks/elasticsearch/tmdb/netfix movies.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies.ipynb
@@ -337,7 +337,8 @@
     "\n",
     "features, _ = client.feature_set(index='tmdb', name='title')\n",
     "\n",
-    "judgmentDict = judgments_by_qid(judgments_from_file(filename='data/title_judgments_train.txt'))\n",
+    "with open('data/title_judgments_train.txt') as f:\n",
+    "    judgmentDict = judgments_by_qid(judgments_from_file(f))\n",
     "\n",
     "\n",
     "rambo=judgmentDict[1]\n",
@@ -894,7 +895,8 @@
     "\n",
     "features, _ = client.feature_set(index='tmdb', name='title2')\n",
     "\n",
-    "judgmentDict = judgments_by_qid(judgments_from_file(filename='data/title_judgments_train.txt'))\n",
+    "with open('data/title_judgments_train.txt') as f:\n",
+    "    judgmentDict = judgments_by_qid(judgments_from_file(filename='data/title_judgments_train.txt'))\n",
     "\n",
     "for qid, judgments in judgmentDict.items():\n",
     "\n",
