--- a/notebooks/solr/tmdb/netfix movies(Solr).ipynb
+++ b/notebooks/solr/tmdb/netfix movies(Solr).ipynb
@@ -185,7 +185,7 @@
     "                                               leafs=20,\n",
     "                                               trees=20,\n",
     "                                               kcv=15,\n",
-    "                                               features=[1,2,3,4,5,6,7],\n",
+    "                                               features=[1,7],\n",
     "                                               featureSet='title')\n",
     "\n",
     "print()\n",
@@ -321,10 +321,10 @@
     "features, _ = client.feature_set(index='tmdb', name='title')\n",
     "\n",
     "with open('data/title_judgments_train.txt') as f:\n",
-    "    judgmentDict = judgments_by_qid(judgments_from_file(f)\n",
+    "    judgmentDict = judgments_by_qid(judgments_from_file(f))\n",
     "\n",
     "\n",
-    "rambo=judgmentDict[1]\n",
+    "rambo = judgmentDict[1]\n",
     "model = eval_model(modelName='title',\n",
     "                       features=features,\n",
     "                       judgments=rambo)\n",
