Fix feature creation on need a bigger bot

--- a/notebooks/solr/tmdb/gonna need a bigger bot (Solr).ipynb
+++ b/notebooks/solr/tmdb/gonna need a bigger bot (Solr).ipynb
@@ -121,7 +121,7 @@
     "    }\n",
     "]\n",
     "\n",
-    "client.create_featureset(index='tmdb', name='title', ftr_config=config)"
+    "client.create_featureset(index='tmdb', name='genome', ftr_config=config)"
    ]
   },
   {
