--- a/notebooks/elasticsearch/tmdb/netfix movies.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies.ipynb
@@ -730,6 +730,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
     "config = {\"validation\": {\n",
     "              \"index\": \"tmdb\",\n",
     "              \"params\": {\n",
@@ -803,10 +805,7 @@
     "    }}\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "from ltr import setup\n",
-    "setup(client, config=config, index='tmdb', featureset='title2')\n",
+    "client.create_featureset(index='tmdb', name='genome', ftr_config=config)\n",
     "\n",
     "from ltr.log import judgments_to_training_set\n",
     "trainingSet = judgments_to_training_set(client, \n",
