wrong featureset used

--- a/notebooks/elasticsearch/tmdb/netfix movies.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies.ipynb
@@ -805,7 +805,7 @@
     "    }}\n",
     "\n",
     "\n",
-    "client.create_featureset(index='tmdb', name='genome', ftr_config=config)\n",
+    "client.create_featureset(index='tmdb', name='title2', ftr_config=config)\n",
     "\n",
     "from ltr.log import judgments_to_training_set\n",
     "trainingSet = judgments_to_training_set(client, \n",
