filename to file obj

--- a/notebooks/elasticsearch/tmdb/netfix movies.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies.ipynb
@@ -895,7 +895,7 @@
     "features, _ = client.feature_set(index='tmdb', name='title2')\n",
     "\n",
     "with open('data/title_judgments_train.txt') as f:\n",
-    "    judgmentDict = judgments_by_qid(judgments_from_file(filename='data/title_judgments_train.txt'))\n",
+    "    judgmentDict = judgments_by_qid(judgments_from_file(f))\n",
     "\n",
     "for qid, judgments in judgmentDict.items():\n",
     "\n",
