--- a/notebooks/elasticsearch/tmdb/sandbox.ipynb
+++ b/notebooks/elasticsearch/tmdb/sandbox.ipynb
@@ -66,7 +66,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "client.create_featureset(index='tmdb', name='title', ftr_config=config)"
+    "client.create_featureset(index='tmdb', name='sandbox', ftr_config=config)"
    ]
   },
   {
