Correct feature config name

--- a/notebooks/elasticsearch/osc-blog/osc-blog.ipynb
+++ b/notebooks/elasticsearch/osc-blog/osc-blog.ipynb
@@ -231,7 +231,7 @@
     "   }\n",
     "}\n",
     "\n",
-    "client.create_featureset(index='blog', name='test', ftr_config=ftr_config)"
+    "client.create_featureset(index='blog', name='test', ftr_config=config)"
    ]
   },
   {
